# llmguard

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  llmguard.db-shm  llmguard.db-wal  pyproject.toml
.github/workflows/: ci.yml
dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.jsx  index.css
dashboard/src/components/: GuardBarChart.jsx  SevBadge.jsx  Sidebar.jsx  Sparkline.jsx  Switch.jsx  TopBar.jsx
dashboard/src/context/: AppContext.jsx  ThemeContext.jsx
dashboard/src/data/: index.js
dashboard/src/hooks/: useApi.js  useEventStream.js
docs/: architecture.md
examples/: README.md  chat.py
llmguard/: db.py
llmguard/adapters/: anthropic_adapter.py  base.py  factory.py  mistral_adapter.py  ollama_adapter.py  openai_adapter.py
llmguard/api/: auth.py  endpoints.py  guards.py  keys.py  server.py
llmguard/audit/: api.py  broadcaster.py  emitter.py  models.py  repository.py  request_context.py  ws.py
llmguard/auth/: keys.py  middleware.py  models.py  repository.py
llmguard/cli/: admin.py
llmguard/config/: models.py  repository.py
llmguard/guards/: base.py  input_guard.py  output_guard.py  translator.py
llmguard/proxy/: main.py
llmguard/ratelimit/: abuse.py  bucket.py  middleware.py
llmguard/tests/: conftest.py  test_adapters.py  test_api.py  test_audit.py  test_auth.py  test_health.py  test_input_guard.py  test_output_guard.py  test_proxy.py  test_ratelimit.py
scripts/: download_models.py
(+8 files in other folders)
